Split optimization and environment and implemented json summary export