@@ -16,6 +16,7 @@
         <module>execution_state</module>
         <module>particle_environment_launcher</module>
         <module>neat_anji</module>
+        <module>optimization_environment_evaluation</module>
     </modules>
 
     <build>
@@ -31,9 +32,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>15</source>
                     <target>15</target>
+                    <compilerArgument>--enable-preview</compilerArgument>
                 </configuration>
             </plugin>
         </plugins>
